--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
   <body>
     <header>
       <section class="logo">
-        <img src="assets/img/logo.jpg" alt="" width="60px" height="60px" />
+        <!-- <img src="assets/img/logo.jpg" alt="" width="60px" height="60px" /> -->
+        <h1>CP</h1>
       </section>
       <nav class="links">
         <!--Navigation-->
