add and change style items

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
       <section class="logo">
         <!-- <img src="assets/img/logo.jpg" alt="" width="60px" height="60px" /> -->
-        <h1>CP</h1>
+        <h1 class="logo">CP</h1>
       </section>
       <nav class="links">
         <!--Navigation-->
@@ -37,10 +37,22 @@
             <a class="nav" href="#"><span></span>Contatos</a>
           </li>
           <li>
-            <a id="button" href="#" lang="en">Download CV</a>
+            <a class="button" href="#" lang="en">Download CV</a>
           </li>
         </ul>
       </nav>
     </header>
+
+    <main>
+      <section class="background"></section>
+      <section class="card-main">
+        <h1>Caio Pires</h1>
+        <p>FrontEnd Developer</p>
+      </section>
+      <section class="mini-card">
+        <a href="#" class="button card1">Download CV</a>
+        <a href="#" class="button card2">Contatos</a>
+      </section>
+    </main>
   </body>
 </html>
