--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" href="css/components/title.css" />
+    <link rel="stylesheet" href="css/components/subtitle.css" />
   </head>
   <body>
     <header>
@@ -47,8 +48,8 @@
     <main>
       <section class="background"></section>
       <section class="card-main">
-        <h1>Caio Pires</h1>
-        <p>FrontEnd Developer</p>
+        <h1 class="title">Caio Pires</h1>
+        <p class="subtitle">FrontEnd Developer</p>
       </section>
       <section class="mini-card">
         <a href="#" class="button card1">Download CV</a>
