Create component box

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" href="css/components/title.css" />
     <link rel="stylesheet" href="css/components/subtitle.css" />
+    <link rel="stylesheet" href="css/components/box.css" />
   </head>
   <body>
     <header>
@@ -47,10 +48,10 @@
 
     <main>
       <section class="background"></section>
-      <section class="card-main">
+      <div id="box">
         <h1 class="title">Caio Pires</h1>
         <p class="subtitle">FrontEnd Developer</p>
-      </section>
+      </div>
       <section class="mini-card">
         <a href="#" class="button card1">Download CV</a>
         <a href="#" class="button card2">Contatos</a>
