change styles components

--- a/index.html
+++ b/index.html
@@ -14,41 +14,32 @@
 
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/components/header.css" />
     <link rel="stylesheet" href="css/components/title.css" />
     <link rel="stylesheet" href="css/components/subtitle.css" />
     <link rel="stylesheet" href="css/components/box.css" />
+    <link rel="stylesheet" href="css/components/button.css" />
+    <link rel="stylesheet" href="css/components/action.css" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <section class="logo">
         <!-- <img src="assets/img/logo.jpg" alt="" width="60px" height="60px" /> -->
         <h1 class="logo">CP</h1>
       </section>
-      <nav class="links">
+      <nav>
         <!--Navigation-->
-        <ul>
-          <li>
-            <a class="nav" href="#"><span></span>Skills</a>
-          </li>
-          <li>
-            <a class="nav" href="#"><span></span>Projetos</a>
-          </li>
-          <li>
-            <a class="nav" href="#"><span></span>Sobre</a>
-          </li>
-          <li>
-            <a class="nav" href="#"><span></span>Contatos</a>
-          </li>
-          <li>
-            <a class="button" href="#" lang="en">Download CV</a>
-          </li>
-        </ul>
+        <a class="action" href="#"><span></span>Skills</a>
+        <a class="action" href="#"><span></span>Projetos</a>
+        <a class="action" href="#"><span></span>Sobre</a>
+        <a class="action" href="#"><span></span>Contatos</a>
+        <a class="button" href="#" lang="en">Download CV</a>
       </nav>
     </header>
 
     <main>
       <section class="background"></section>
-      <div id="box">
+      <div class="box">
         <h1 class="title">Caio Pires</h1>
         <p class="subtitle">FrontEnd Developer</p>
       </div>
