--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" href="css/components/header.css" />
+    <link rel="stylesheet" href="css/components/logo.css" />
+    <link rel="stylesheet" href="css/components/banner.css" />
     <link rel="stylesheet" href="css/components/title.css" />
     <link rel="stylesheet" href="css/components/subtitle.css" />
     <link rel="stylesheet" href="css/components/box.css" />
@@ -38,14 +40,17 @@
     </header>
 
     <main>
-      <section class="background"></section>
-      <div class="box">
-        <h1 class="title">Caio Pires</h1>
-        <p class="subtitle">FrontEnd Developer</p>
-      </div>
-      <section class="mini-card">
-        <a href="#" class="button card1">Download CV</a>
-        <a href="#" class="button card2">Contatos</a>
+      <section class="banner">
+        <div class="wrapper">
+          <div class="box">
+            <h1 class="title">Caio Pires</h1>
+            <h3 class="subtitle">FrontEnd Developer</h3>
+          </div>
+          <div class="navigation">
+            <a href="#" class="button">Download CV</a>
+            <a href="#" class="button">Contatos</a>
+          </div>
+        </div>
       </section>
     </main>
   </body>
