--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="css/components/header.css" />
     <link rel="stylesheet" href="css/components/logo.css" />
     <link rel="stylesheet" href="css/components/banner.css" />
+    <link rel="stylesheet" href="css/components/skills.css" />
     <link rel="stylesheet" href="css/components/title.css" />
     <link rel="stylesheet" href="css/components/subtitle.css" />
     <link rel="stylesheet" href="css/components/box.css" />
@@ -39,19 +40,19 @@
       </nav>
     </header>
 
-    <main>
-      <section class="banner">
-        <div class="wrapper">
-          <div class="box">
-            <h1 class="title">Caio Pires</h1>
-            <h3 class="subtitle">FrontEnd Developer</h3>
-          </div>
-          <div class="navigation">
-            <a href="#" class="button">Download CV</a>
-            <a href="#" class="button">Contatos</a>
-          </div>
+    <section class="banner">
+      <div class="wrapper">
+        <div class="box">
+          <h1 class="title">Caio Pires</h1>
+          <h3 class="subtitle">FrontEnd Developer</h3>
         </div>
-      </section>
-    </main>
+        <div class="navigation">
+          <a href="#" class="button">Download CV</a>
+          <a href="#" class="button">Contatos</a>
+        </div>
+      </div>
+    </section>
+
+    <h2 class="title -second">Skills</h2>
   </body>
 </html>
