--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="css/components/header.css" />
     <link rel="stylesheet" href="css/components/logo.css" />
     <link rel="stylesheet" href="css/components/banner.css" />
-    <link rel="stylesheet" href="css/components/skills.css" />
+    <link rel="stylesheet" href="css/components/section.css" />
     <link rel="stylesheet" href="css/components/title.css" />
     <link rel="stylesheet" href="css/components/subtitle.css" />
     <link rel="stylesheet" href="css/components/box.css" />
@@ -52,7 +52,8 @@
         </div>
       </div>
     </section>
-
-    <h2 class="title -second">Skills</h2>
+    <section class="section">
+      <h2 class="title -second">Skills</h2>
+    </section>
   </body>
 </html>
