--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <link rel="stylesheet" href="css/components/action.css" />
     <link rel="stylesheet" href="css/components/skill-tec.css" />
     <link rel="stylesheet" href="css/components/progress-bar.css" />
+    <link rel="stylesheet" href="css/components/wrapper-skill.css" />
+    <link rel="stylesheet" href="css/components/section-projetos.css" />
   </head>
   <body>
     <header class="header">
@@ -58,13 +60,132 @@
     <section class="section">
       <h2 class="main-title -second">Skills</h2>
 
-      <article class="skill-tec">
-        <img class="icon" src="assets/img/ico_html5.png" alt="Logo HTML" />
-        <div class="right">
-          <h3 class="title">HTML</h3>
-          <progress class="progress-bar" max="100" value="70">70%</progress>
-        </div>
-      </article>
+      <div class="wrapper-skill">
+        <article class="skill-tec">
+          <img
+            class="icon"
+            src="assets/img/ico_html5.png"
+            alt="Logo HTML em pixel art"
+          />
+          <div class="right">
+            <h3 class="title">HTML</h3>
+            <progress class="progress-bar" max="100" value="70">70%</progress>
+          </div>
+        </article>
+
+        <article class="skill-tec">
+          <img
+            class="icon"
+            src="assets/img/ico_css3.png"
+            alt="Logo CSS em pixel art"
+          />
+          <div class="right">
+            <h3 class="title">CSS</h3>
+            <progress class="progress-bar" max="100" value="70">70%</progress>
+          </div>
+        </article>
+
+        <article class="skill-tec">
+          <img
+            class="icon"
+            src="assets/img/ico_js.png"
+            alt="Logo JavaScript em pixel art"
+          />
+          <div class="right">
+            <h3 class="title">JavaScript</h3>
+            <progress class="progress-bar" max="100" value="70">70%</progress>
+          </div>
+        </article>
+
+        <article class="skill-tec">
+          <img
+            class="icon"
+            src="assets/img/ico_react.png"
+            alt="Logo React em pixel art"
+          />
+          <div class="right">
+            <h3 class="title">React</h3>
+            <progress class="progress-bar" max="100" value="70">70%</progress>
+          </div>
+        </article>
+
+        <article class="skill-tec">
+          <img
+            class="icon"
+            src="assets/img/ico_nodejs.png"
+            alt="Logo Node-JS em pixel art"
+          />
+          <div class="right">
+            <h3 class="title">NodeJS</h3>
+            <progress class="progress-bar" max="100" value="70">70%</progress>
+          </div>
+        </article>
+
+        <article class="skill-tec">
+          <img
+            class="icon"
+            src="assets/img/ico_tdd.png"
+            alt="Logo TDD em pixel art"
+          />
+          <div class="right">
+            <h3 class="title">TDD</h3>
+            <progress class="progress-bar" max="100" value="70">70%</progress>
+          </div>
+        </article>
+
+        <article class="skill-tec">
+          <img
+            class="icon"
+            src="assets/img/ico_restapi.png"
+            alt="Logo Rest API em pixel art"
+          />
+          <div class="right">
+            <h3 class="title">Rest API</h3>
+            <progress class="progress-bar" max="100" value="70">70%</progress>
+          </div>
+        </article>
+
+        <article class="skill-tec">
+          <img
+            class="icon"
+            src="assets/img/ico_ux.png"
+            alt="Logo UX em pixel art"
+          />
+          <div class="right">
+            <h3 class="title">UX</h3>
+            <progress class="progress-bar" max="100" value="70">70%</progress>
+          </div>
+        </article>
+      </div>
+    </section>
+
+    <section class="projetos">
+      <h2 class="main-title -second">Projetos</h2>
+      <div class="projetos-wrapper">
+        <figure class="card-project">
+          <img
+            class="logo"
+            src="assets/img/logo-firedlabs.png"
+            alt="logo da firedlabs"
+          />
+        </figure>
+
+        <figure class="card-project">
+          <img
+            class="logo"
+            src="assets/img/logo-collabcode.png"
+            alt="logo da collabcode"
+          />
+        </figure>
+
+        <figure class="card-logo">
+          <img
+            class="logo"
+            src="assets/img/portfolio.png"
+            alt="logo do marco bruno"
+          />
+        </figure>
+      </div>
     </section>
   </body>
 </html>
