edited section component

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       </div>
     </section>
 
-    <section class="projetos">
+    <section class="section projetos -bdFirst -bgBlack">
       <h2 class="main-title -second">Projetos</h2>
       <div class="projetos-wrapper">
         <figure class="card-project">
