--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="css/components/progress-bar.css" />
     <link rel="stylesheet" href="css/components/wrapper-skill.css" />
     <link rel="stylesheet" href="css/components/section-projetos.css" />
+    <link rel="stylesheet" href="css/components/wrapper-card.css" />
   </head>
   <body>
     <header class="header">
@@ -161,7 +162,7 @@
 
     <section class="section projetos -bdFirst -bgBlack">
       <h2 class="main-title -second">Projetos</h2>
-      <div class="projetos-wrapper">
+      <div class="wrapper-card">
         <figure class="card-project">
           <img
             class="logo"
