Create links of card-project

--- a/index.html
+++ b/index.html
@@ -163,29 +163,35 @@
     <section class="section projetos -bdFirst -bgBlack">
       <h2 class="main-title -second">Projetos</h2>
       <div class="wrapper-card">
-        <figure class="card-project">
-          <img
-            class="logo"
-            src="assets/img/logo-firedlabs.png"
-            alt="logo da firedlabs"
-          />
-        </figure>
+        <a href="https://www.firedlabs.com/" target="_blank">
+          <figure class="card-project">
+            <img
+              class="logo"
+              src="assets/img/logo-firedlabs.png"
+              alt="logo da firedlabs"
+            />
+          </figure>
+        </a>
 
-        <figure class="card-project">
-          <img
-            class="logo"
-            src="assets/img/logo-collabcode.png"
-            alt="logo da collabcode"
-          />
-        </figure>
+        <a href="https://collabcode.training/" target="_blank">
+          <figure class="card-project">
+            <img
+              class="logo"
+              src="assets/img/logo-collabcode.png"
+              alt="logo da collabcode"
+            />
+          </figure>
+        </a>
 
-        <figure class="card-logo">
-          <img
-            class="logo"
-            src="assets/img/portfolio.png"
-            alt="logo do marco bruno"
-          />
-        </figure>
+        <a href="https://www.linkedin.com/in/caio-pires92/" target="_blank">
+          <figure class="card-logo">
+            <img
+              class="logo"
+              src="assets/img/portfolio.png"
+              alt="logo do marco bruno"
+            />
+          </figure>
+        </a>
       </div>
     </section>
   </body>
