--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="css/components/subtitle.css" />
     <link rel="stylesheet" href="css/components/box.css" />
     <link rel="stylesheet" href="css/components/button.css" />
-    <link rel="stylesheet" href="css/components/action.css" />
+    <link rel="stylesheet" href="css/components/main-action.css" />
     <link rel="stylesheet" href="css/components/skill-tec.css" />
     <link rel="stylesheet" href="css/components/progress-bar.css" />
     <link rel="stylesheet" href="css/components/wrapper-skill.css" />
@@ -37,10 +37,10 @@
       </section>
       <nav>
         <!--Navigation-->
-        <a class="action" href="#"><span></span>Skills</a>
-        <a class="action" href="#"><span></span>Projetos</a>
-        <a class="action" href="#"><span></span>Sobre</a>
-        <a class="action" href="#"><span></span>Contatos</a>
+        <a class="main-action" href="#"><span></span>Skills</a>
+        <a class="main-action" href="#"><span></span>Projetos</a>
+        <a class="main-action" href="#"><span></span>Sobre</a>
+        <a class="main-action" href="#"><span></span>Contatos</a>
         <a class="button" href="#" lang="en">Download CV</a>
       </nav>
     </header>
