--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" href="css/components/header.css" />
     <link rel="stylesheet" href="css/components/logo.css" />
-    <link rel="stylesheet" href="css/components/banner.css" />
+    <link rel="stylesheet" href="css/components/main-banner.css" />
     <link rel="stylesheet" href="css/components/section.css" />
     <link rel="stylesheet" href="css/components/main-title.css" />
     <link rel="stylesheet" href="css/components/subtitle.css" />
@@ -45,7 +45,7 @@
       </nav>
     </header>
 
-    <section class="banner">
+    <section class="main-banner">
       <div class="wrapper">
         <div class="box">
           <h1 class="main-title">Caio Pires</h1>
