--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="css/components/section.css" />
     <link rel="stylesheet" href="css/components/main-title.css" />
     <link rel="stylesheet" href="css/components/subtitle.css" />
-    <link rel="stylesheet" href="css/components/box.css" />
+    <link rel="stylesheet" href="css/components/main-box.css" />
     <link rel="stylesheet" href="css/components/button.css" />
     <link rel="stylesheet" href="css/components/main-action.css" />
     <link rel="stylesheet" href="css/components/skill-tec.css" />
@@ -47,7 +47,7 @@
 
     <section class="main-banner">
       <div class="wrapper">
-        <div class="box">
+        <div class="main-box">
           <h1 class="main-title">Caio Pires</h1>
           <h3 class="subtitle">FrontEnd Developer</h3>
         </div>
