--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="css/components/main-title.css" />
     <link rel="stylesheet" href="css/components/subtitle.css" />
     <link rel="stylesheet" href="css/components/main-box.css" />
-    <link rel="stylesheet" href="css/components/button.css" />
+    <link rel="stylesheet" href="css/components/main-button.css" />
     <link rel="stylesheet" href="css/components/main-action.css" />
     <link rel="stylesheet" href="css/components/skill-tec.css" />
     <link rel="stylesheet" href="css/components/progress-bar.css" />
@@ -41,7 +41,7 @@
         <a class="main-action" href="#"><span></span>Projetos</a>
         <a class="main-action" href="#"><span></span>Sobre</a>
         <a class="main-action" href="#"><span></span>Contatos</a>
-        <a class="button" href="#" lang="en">Download CV</a>
+        <a class="main-button" href="#" lang="en">Download CV</a>
       </nav>
     </header>
 
@@ -52,8 +52,8 @@
           <h3 class="subtitle">FrontEnd Developer</h3>
         </div>
         <div class="navigation">
-          <a href="#" class="button">Download CV</a>
-          <a href="#" class="button">Contatos</a>
+          <a href="#" class="main-button">Download CV</a>
+          <a href="#" class="main-button">Contatos</a>
         </div>
       </div>
     </section>
