change header to main-header

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/index.css" />
-    <link rel="stylesheet" href="css/components/header.css" />
+    <link rel="stylesheet" href="css/components/main-header.css" />
     <link rel="stylesheet" href="css/components/logo.css" />
     <link rel="stylesheet" href="css/components/main-banner.css" />
     <link rel="stylesheet" href="css/components/section.css" />
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="css/components/wrapper-card.css" />
   </head>
   <body>
-    <header class="header">
+    <header class="main-header">
       <section class="logo">
         <!-- <img src="assets/img/logo.jpg" alt="" width="60px" height="60px" /> -->
         <h1 class="logo">CP</h1>
