--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="css/components/main-header.css" />
     <link rel="stylesheet" href="css/components/logo.css" />
     <link rel="stylesheet" href="css/components/main-banner.css" />
-    <link rel="stylesheet" href="css/components/section.css" />
+    <link rel="stylesheet" href="css/components/main-section.css" />
     <link rel="stylesheet" href="css/components/main-title.css" />
     <link rel="stylesheet" href="css/components/subtitle.css" />
     <link rel="stylesheet" href="css/components/main-box.css" />
@@ -58,7 +58,7 @@
       </div>
     </section>
 
-    <section class="section">
+    <section class="main-section">
       <h2 class="main-title -second">Skills</h2>
 
       <div class="wrapper-skill">
@@ -160,7 +160,7 @@
       </div>
     </section>
 
-    <section class="section projetos -bdFirst -bgBlack">
+    <section class="main-section projetos -bdFirst -bgBlack">
       <h2 class="main-title -second">Projetos</h2>
       <div class="wrapper-card">
         <a href="https://www.firedlabs.com/" target="_blank">
