--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="css/components/main-banner.css" />
     <link rel="stylesheet" href="css/components/main-section.css" />
     <link rel="stylesheet" href="css/components/main-title.css" />
-    <link rel="stylesheet" href="css/components/subtitle.css" />
+    <link rel="stylesheet" href="css/components/main-subtitle.css" />
     <link rel="stylesheet" href="css/components/main-box.css" />
     <link rel="stylesheet" href="css/components/main-button.css" />
     <link rel="stylesheet" href="css/components/main-action.css" />
@@ -44,12 +44,12 @@
         <a class="main-button" href="#" lang="en">Download CV</a>
       </nav>
     </header>
-
+    
     <section class="main-banner">
       <div class="wrapper">
         <div class="main-box">
           <h1 class="main-title">Caio Pires</h1>
-          <h3 class="subtitle">FrontEnd Developer</h3>
+          <h3 class="main-subtitle">FrontEnd Developer</h3>
         </div>
         <div class="navigation">
           <a href="#" class="main-button">Download CV</a>
